Fixed Add patient modal and Patient details modal layout issue on mobile devices.

--- a/src/components/UI/PatientDetailsModal/PatientDetailsModal.module.scss
+++ b/src/components/UI/PatientDetailsModal/PatientDetailsModal.module.scss
@@ -3,8 +3,8 @@
 .PatientDetailModal {
     height: fit-content;
     width: 35rem;
-    max-width: 95%;
-    margin: 5rem auto;
+    max-width: 90%;
+    margin: 2rem auto;
     overflow: hidden;
     border-radius: 4rem 0 4rem 0;
     color: $whiteish;
